More general cleanup for bugs moving from 2 to 3 and pyqt4 to pyqt5

--- a/resources.qrc
+++ b/resources.qrc
@@ -7,6 +7,7 @@
     <file>bitmaps/star.png</file>
     <file>bitmaps/delete.png</file>
     <file>bitmaps/priority.png</file>
+    <file>bitmaps/box.png</file>
 </qresource>
 </RCC>
 
