--- a/templates/recent.html
+++ b/templates/recent.html
@@ -4,7 +4,7 @@
     <title>Recent Tasks</title>
 </head>
 <body>
-    <h1>Recent Tasks</h1>
+    <h3>Recent Tasks</h3>
     <ul id="navigation">
     {% for task in tasks %}
         <li> 
@@ -19,7 +19,22 @@
     {% endfor %}
     </ul> 
 
-    <h1>Work Tasks</h1>
+    <h3>Alarms</h3>
+    <ul id="navigation">
+    {% for task in tasks3 %}
+        <li> 
+            {% if task.star %}
+             <img src="{{ url_for('static', filename='img/star.png') }}"></img>
+            {% endif %}
+            {{ task.title }}
+            {% if task.remind %}
+            <i>{{" (next reminder: "+task.duetime.strftime('%a %b %d %Y %I:%M %p')+")" }}</i>
+            {% endif %}
+         </li>
+    {% endfor %}
+    </ul> 
+
+    <h3>Work Tasks</h3>
     <ul id="navigation">
     {% for task in tasks2 %}
         <li> 
